# rooted

./: .dockerignore  .env.example  .gitignore  .gitleaksignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  keepalive.yml  mobile-android.yml  mobile-ios.yml
api/: README.md  pyproject.toml
api/rooted_api/: __init__.py  agent.py  b2_events.py  byo.py  checkpoint.py  dedup.py  demo.py  genblaze.py  genblaze_verify.py  generate.py  integrity.py  limits.py  lineage.py  main.py  make_genblaze_b2_sample.py  make_genblaze_transcript_sample.py  remote_watermark.py  sbr.py  status.py  tamper.py  transcript.py
api/rooted_api/assets/: genblaze-b2-manifest.json  genblaze-transcript-b2.json  genblaze-transcript-manifest.json  genblaze-transcript.txt  integrity-clash-embedded.json
api/tests/: test_agent.py  test_audio.py  test_b2_depth.py  test_b2_events.py  test_body_limit.py  test_byo_upload.py  test_checkpoint.py  test_contract.py  test_decode_limits.py  test_demo.py  test_demo_b2.py  test_federation.py  test_genblaze.py  test_genblaze_verify.py  test_generate.py  test_health.py  test_ingest_security.py  test_integrity_clash.py  test_lineage.py  test_mcp_mount.py  test_providers.py  test_receipts.py  test_remark_failover.py  test_remote_watermark.py  test_resolver_wiring.py  test_sbr.py  test_signing_key.py  test_status.py  test_tamper.py  test_transcript.py  test_transparency.py  test_verify.py  test_video.py  test_watermarker_wiring.py
cli/: README.md  pyproject.toml
cli/rooted_cli/: __init__.py  main.py
cli/tests/: test_cli.py
docs/: README.md  deploy.md
extension/: README.md  background.js  manifest.json  popup.html  popup.js
infra/modal/: watermark_service.py
load/: locustfile.py
mcp/: README.md  pyproject.toml
mcp/rooted_mcp/: __init__.py  server.py
mcp/tests/: test_server.py
mobile/android/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/java/io/rooted/verify/: MainActivity.kt
mobile/android/app/src/main/java/io/rooted/verify/about/: AboutScreen.kt
mobile/android/app/src/main/java/io/rooted/verify/api/: RootedClient.kt
mobile/android/app/src/main/java/io/rooted/verify/log/: LogScreen.kt  LogViewModel.kt
mobile/android/app/src/main/java/io/rooted/verify/ui/: Theme.kt
mobile/android/app/src/main/java/io/rooted/verify/util/: ImageScaler.kt
mobile/android/app/src/main/java/io/rooted/verify/verify/: VerifyScreen.kt  VerifyViewModel.kt
mobile/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
mobile/android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/android/app/src/test/java/io/rooted/verify/: JsonContractTest.kt  MultipartRequestTest.kt  SampleSizeTest.kt
mobile/ios/: .gitignore  README.md  project.yml
mobile/ios/Rooted/: RootedApp.swift  Theme.swift
mobile/ios/Rooted/Api/: RootedClient.swift
mobile/ios/Rooted/Features/About/: AboutView.swift
mobile/ios/Rooted/Features/Log/: LogView.swift  LogViewModel.swift
mobile/ios/Rooted/Features/Share/: SharePayload.swift
mobile/ios/Rooted/Features/Verify/: CameraPicker.swift  ImageProcessor.swift  VerifyView.swift  VerifyViewModel.swift
mobile/ios/RootedShare/: ShareResultView.swift  ShareViewController.swift
mobile/ios/RootedTests/: ImageProcessorTests.swift  MultipartBodyTests.swift  ResponseDecodingTests.swift  SharePayloadTests.swift
scripts/: activate_object_lock.py  activate_watermark_modal.sh  configure_b2_byo_cors.py  configure_b2_event_rule.py  configure_b2_lifecycle.py  configure_b2_sse.py  create_b2_scoped_key.py  make_credentialed_sample.py  make_lineage_sample.py  publish_cli_pypi.sh
web/: .env.example  .gitignore  README.md  next.config.ts  openapi.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
web/e2e/: recover.spec.ts
web/public/: badge.js
web/src/app/: globals.css  layout.tsx  manifest.ts  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts  twitter-image.tsx
web/src/app/badge/[id]/: route.test.ts  route.ts
web/src/app/r/[id]/: not-found.tsx  opengraph-image.tsx  page.tsx  twitter-image.tsx
web/src/components/: agent-panel.test.tsx  agent-panel.tsx  audio-panel.test.tsx  audio-panel.tsx  b2-events-panel.test.tsx  b2-events-panel.tsx  byo-upload-panel.test.tsx  byo-upload-panel.tsx  checkpoint-history-panel.test.tsx  checkpoint-history-panel.tsx  checkpoint-lock-panel.test.tsx  checkpoint-lock-panel.tsx  comparison-panel.test.tsx  comparison-panel.tsx  consistency-panel.test.tsx  consistency-panel.tsx  content-credentials.tsx  federation-panel.test.tsx  federation-panel.tsx  genblaze-panel.test.tsx  genblaze-panel.tsx  genblaze-verify-panel.test.tsx  genblaze-verify-panel.tsx  generate-panel.test.tsx  generate-panel.tsx  hero.test.tsx  hero.tsx  integrity-clash-panel.test.tsx  integrity-clash-panel.tsx  lineage-panel.test.tsx  lineage-panel.tsx  metrics-ribbon.test.tsx  metrics-ribbon.tsx  provenance-receipt.test.tsx  provenance-receipt.tsx  providers-panel.test.tsx  providers-panel.tsx  rebuild-panel.test.tsx  rebuild-panel.tsx  receipt-panel.test.tsx  (+22 more)
web/src/components/three/: atmosphere.tsx  dust.tsx  galaxy.tsx  lineage-graph.tsx  merkle-explorer.test.tsx  merkle-explorer.tsx  merkle-graph.tsx  scene-backdrop.tsx  scene.tsx
web/src/lib/: providers.tsx  receipt-manifest.ts  site.ts  use-in-view.test.tsx  use-in-view.ts  use-log-pulse.test.ts  use-log-pulse.ts  use-reduced-motion-pref.ts
web/src/lib/api/: client.ts  schema.d.ts
web/src/types/: r3f-forcegraph.d.ts
worker/: README.md  pyproject.toml
worker/rooted_worker/: __init__.py  generator.py  pipeline.py
worker/tests/: test_generator.py  test_pipeline.py
