[project]
name = "rooted"
version = "0.1.0"
description = "Open, vendor-neutral C2PA Soft Binding Resolution server on Backblaze B2"
requires-python = ">=3.11,<3.14"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["api"]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["rooted_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["api/tests"]

[tool.mypy]
python_version = "3.12"
strict = true
