[project]
name = "rooted-api"
version = "0.1.0"
description = "Rooted SBR API (C2PA v2.4 Soft Binding Resolution)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "rooted-provenance",
    "rooted-storage",
    "rooted-worker",
]

[project.optional-dependencies]
# Live generation (POST /demo/generate) needs the Genblaze provider SDKs (light, no torch). Kept
# optional so the default lean deploy installs without them; the deploy that runs live generation
# builds with `uv sync --extra genblaze` and sets GMI_CLOUD_API_KEY.
genblaze = ["rooted-worker[genblaze]"]

[tool.uv.sources]
rooted-provenance = { workspace = true }
rooted-storage = { workspace = true }
rooted-worker = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rooted_api"]
