[project]
name = "rooted-api"
version = "0.1.0"
description = "Rooted SBR API (C2PA v2.4 Soft Binding Resolution)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "rooted-provenance",
    "rooted-storage",
    # rooted-worker with the genblaze extra: the Genblaze provider SDKs are light (no torch), so they
    # ship in the base install. This keeps the deploy self-consistent (the standard build command
    # installs everything live generation needs) with no separate extra or blueprint sync to forget.
    "rooted-worker[genblaze]",
]

[tool.uv.sources]
rooted-provenance = { workspace = true }
rooted-storage = { workspace = true }
rooted-worker = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rooted_api"]
