[project]
name = "rooted-api"
version = "0.1.0"
description = "Rooted SBR API (C2PA v2.4 Soft Binding Resolution)"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "rooted-provenance",
    "rooted-storage",
    # rooted-worker with the genblaze extra: the Genblaze provider SDKs are light (no torch), so they
    # ship in the base install. This keeps the deploy self-consistent (the standard build command
    # installs everything live generation needs) with no separate extra or blueprint sync to forget.
    "rooted-worker[genblaze]",
    # rooted-mcp (the curated provenance MCP server) is mounted in-process at /mcp on this app, so the
    # MCP product surface is reachable on the same deploy with no separate service. It is light
    # (fastmcp + httpx, no native build), so it ships in the base install.
    "rooted-mcp",
    # The Anthropic SDK powers the live provenance agent (/demo/agent), which is opt-in via
    # ANTHROPIC_API_KEY and serves an honest disabled response until a key is set.
    "anthropic>=0.40",
]

[tool.uv.sources]
rooted-provenance = { workspace = true }
rooted-storage = { workspace = true }
rooted-worker = { workspace = true }
rooted-mcp = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rooted_api"]
