[project]
name = "rooted-mcp"
version = "0.1.0"
description = "Rooted MCP server: curated provenance tools over the SBR API"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastmcp>=2.11",
    "httpx>=0.27",
]

[project.scripts]
rooted-mcp = "rooted_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rooted_mcp"]
