[project]
name = "rooted-worker"
version = "0.1.0"
description = "Rooted ingest pipeline: generate -> store -> watermark -> fingerprint -> sign -> log"
requires-python = ">=3.11,<3.14"
dependencies = [
    "rooted-provenance",
    "rooted-storage",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Genblaze pulls provider SDKs; kept optional. The pipeline is tested with a fake generator, and
# GenblazeGenerator imports genblaze lazily so the worker installs and CI run without these.
genblaze = [
    "genblaze>=0.3",
    "genblaze-gmicloud>=0.3",
    "genblaze-openai>=0.3",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rooted_worker"]

[tool.uv.sources]
rooted-provenance = { workspace = true }
rooted-storage = { workspace = true }
